--- a/dreamchess.desktop
+++ b/dreamchess.desktop
@@ -3,9 +3,8 @@ Name=Dreamchess
 Comment=3D X-Window chess game
 Comment[pl]=Trójwymiarowa gra szachowa dla X-Window
 Exec=dreamchess
-Icon=dreamchess.png
+Icon=dreamchess
 Terminal=false
 Type=Application
 Categories=Game;BoardGame;
-Encoding=UTF-8
 # vi: encoding=utf-8
